test/fail/non-persistent6.mo
//MOC-FLAG --persistent
actor {
  transient let _x = #x;
  transient var _y = #y;
  let _z = #z;
}
